--- a/src/main/resources/templates/tests.html
+++ b/src/main/resources/templates/tests.html
@@ -140,16 +140,22 @@
         <hr class="my-4 border-t border-gray-300">
 
         <div class="mt-4 space-y-4">
-            <form >
+            <form action="#" method="get">
                 <button type="submit" class="flex items-center p-3 rounded hover:bg-gray-200 transition w-full text-left">
                     <span class="text-2xl">👤</span>
                     <span class="ml-2">Profil</span>
                 </button>
             </form>
-            <form >
+            <form action="#" method="get" >
                 <button type="submit" class="flex items-center p-3 rounded hover:bg-gray-200 transition w-full text-left">
                     <span class="text-2xl">⚙️</span>
                     <span class="ml-2">Sozlamalar</span>
+                </button>
+            </form>
+            <form action="#" method="get">
+                <button type="submit" class="flex items-center p-3 rounded hover:bg-gray-200 transition w-full text-left">
+                    <span class="text-2xl">🤖</span>
+                    <span class="ml-2">eKutubxona support</span>
                 </button>
             </form>
             <form action="/auth/logout-page" method="GET">
@@ -174,7 +180,7 @@
                 <p class="text-gray-600 text-sm mt-2 mb-4 truncate" th:text="${book.description}">Description</p>
                 <div class="flex justify-between mt-4">
                     <form th:action="@{/book/open/{fileName}(fileName=${book.getFileGeneratedName()})}" method="get" target="_blank">
-                        <button class="open-btn" type="submit">Open</button>
+                        <button class="open-btn" type="submit">Ochish</button>
                     </form>
 
                     <form th:action="@{/book/{fileName}(fileName=${book.getFileGeneratedName()})}" method="get">
